--- a/topografiya/templates/index.html
+++ b/topografiya/templates/index.html
@@ -45,7 +45,7 @@
                                                 <div class="modal-dialog modal-lg">
                                                     <div class="modal-content">
                                                         <div class="modal-header">
-                                                            <h4 class="modal-title" id="myLargeModalLabel">Bajaralidigan ish</h4>
+                                                            <h4 class="modal-title" id="myLargeModalLabel">Bajaraladigan ish</h4>
                                                             <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close" data-bs-original-title="" title=""></button>
                                                         </div>
                                                         <div class="modal-body">
