--- a/topografiya/templates/oogd_printer/show.html
+++ b/topografiya/templates/oogd_printer/show.html
@@ -196,7 +196,7 @@
                                             <ul>
                                                <li class="p-1"><b class="text-primary">Қайтариш сабаби: </b> {{ work.reason }}</li>
                                                 {% if work.file %}
-                                                    <li class="p-1"><a href="/{{ work.file }}" target="_blank"><i class="fa fa-file-pdf-o"></i> Қайтариш сабаби иловаси</a></li>
+                                                    <li class="p-1"><a href="/{{ work.file }}" target="_blank"><i class="fa fa-file-pdf-o"></i> Қайтариш сабаби иловаси <b class="text-danger">{{ work.version }}-V</b></a></li>
                                                 {% endif %}
                                             </ul>
                                             <hr>
@@ -519,7 +519,7 @@
                         <div class="file-content">
                             <div class="card">
                                 <div class="card-body file-manager ">
-                                    <h4 class="m-b-20 m-t-20">Муҳандислик тармоқлари сиёмкаси бўйича бош геодезис назорати</h4>
+                                    <h4 class="m-b-20 m-t-20">Топографик материалларни чоп етиш</h4>
                                     <div class="row m-b-30">
                                         <div class="col-lg-12">
                                             <div id="map"></div>
